feat: add content index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV Lidia Murashko</title>
+</head>
+<body>
+    <h1>Lidia Murashko</h1>
+
+    <h1>Contacts</h1>
+    <ul>
+        <li> Location: Minsk, Belarus </li>
+        <li> Phone: +375 44 5682419 </li>
+        <li> Email: 7697442@mail.com </li>
+        <li> GitHub: https://github.com/Lliiddiiaa </li>
+    </ul>
+
+    <h2> About me </h2>
+
+    <p>BNTU student with the desire to become a developer. Learn HTML/CSS,JS, try to gain new knowledge every day.</p>
+
+    <h2>Skills</h2>
+
+    <ul>
+        <li>HTML/CSS</li>
+        <li>Basic JavaScript</li>
+        <li>Git</li>
+    </ul>
+
+    <h2>Education</h2>
+
+    <h3>College:</h3> 
+    <p>College of Languages and Humanities</p>
+
+    <h3> University: </h3> 
+    <body>BNTU, FMME</body>p>
+
+    
+</body>
+</html>
